Product page and comments added

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-multi-carousel": "^2.6.2",
     "react-parallax": "^3.2.1",
     "react-router-dom": "^5.2.0",
+    "react-script": "^2.0.5",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
@@ -49,5 +50,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
